@@ -25,7 +25,6 @@ import javax.inject.Singleton;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.artifact.Artifact;
@@ -50,7 +49,7 @@ public class DefaultArtifactTransformationManager implements ArtifactTransformat
         this.artifactTransformations = Stream.of("release", "latest", "snapshot")
                 .map(artifactTransformations::get)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void transformForResolve(Artifact artifact, RepositoryRequest request)
