@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toSet;
@@ -118,7 +117,7 @@ public class ProjectActivation {
      */
     @Deprecated
     public void overwriteActiveProjects(List<String> activeProjectSelectors) {
-        List<ProjectActivationSettings> projects = getProjects(pa -> pa.active).collect(Collectors.toList());
+        List<ProjectActivationSettings> projects = getProjects(pa -> pa.active).toList();
         this.activations.removeAll(projects);
         activeProjectSelectors.forEach(this::activateOptionalProject);
     }
@@ -130,7 +129,7 @@ public class ProjectActivation {
      */
     @Deprecated
     public void overwriteInactiveProjects(List<String> inactiveProjectSelectors) {
-        List<ProjectActivationSettings> projects = getProjects(pa -> !pa.active).collect(Collectors.toList());
+        List<ProjectActivationSettings> projects = getProjects(pa -> !pa.active).toList();
         this.activations.removeAll(projects);
         inactiveProjectSelectors.forEach(this::deactivateOptionalProject);
     }
