@@ -21,7 +21,6 @@ package org.apache.maven.internal.impl;
 import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 class Utils {
     static <T> T nonNull(T t) {
@@ -46,6 +45,6 @@ class Utils {
     }
 
     static <U, V> List<V> map(Collection<U> list, Function<U, V> mapper) {
-        return list.stream().map(mapper).collect(Collectors.toList());
+        return list.stream().map(mapper).toList();
     }
 }
